--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,26 @@
-{
+{    
     "env": {
         "browser": true,
         "es2021": true,
         "node": true
     },
     "extends": [
-        "standard-with-typescript",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "next",
+        "standard-with-typescript"
+    ],
+    "overrides": [
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "project": "./tsconfig.json"
     },
     "plugins": [
         "react"
     ],
     "rules": {
-        "@react/react-in-jsx-scope": "off",
-        "@typescript/explicit-return-type": "off"
+      "react/react-in-jsx-scope": "off",
+      "@typescript-eslint/explicit-function-return-type": "off"
     }
 }
