--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^2.39.0",
+    "clsx": "^2.0.0",
     "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
