--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.1",
+    "@supabase/supabase-js": "^2.38.2",
     "@tabler/icons-react": "^2.39.0",
     "clsx": "^2.0.0",
     "next": "13.5.6",
