--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.33.2",
     "postcss": "8.4.29",
+    "supabase": "^1.106.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
