--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clsx": "^2.0.0",
     "next": "13.5.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@types/node": "20.5.9",
