--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "zustand": "^4.4.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "6.8.0",
     "autoprefixer": "10.4.15",
+    "daisyui": "^3.9.4",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
     "eslint-config-standard-with-typescript": "39.1.1",
