--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@/*": ["./app/*"],
       "@components/*": ["./components/*"],
       "@types": ["./lib/types"],
-      "@const": ["./lib/const"]
+      "@const": ["./lib/const"],
+      "@database": ["./lib/database"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
