--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "clsx": "^2.0.0",
     "next": "13.5.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "zustand": "^4.4.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
